# Estrutura-de-Dados

./: teste.c
Aula 02/: arvore_binaria.c  provinha01.c
Aula 03/: balanceada.c  busca_esqueleto.c
Aula 04/: insere_AVL.c  insere_v2.c
Aula 06/: Arquivo 1.txt  Exercicio 1.c  funcionario_provinha.c  merge_completar.c  numeros2.txt
Aula 07/: busca_binaria.c  insertion_sort_disco_solucao.c  insertion_sort_memoria.c
Aula 08/: class_interna.c  entrada.txt  sel_nat_aula.c  sel_subst_solucao.c
Aula 09/: part1.txt  part5.txt
Aula 1/: Exercício1.c  Exercício2.c
Aula 10/: arvore-b.c  provinha 09.c
Aula 11/: Provinha 10.txt
Aula 12/encadeamento-exterior-disco/: CMakeLists.txt  cliente.c  cliente.h  encadeamento_exterior.c  lista_clientes.c  lista_clientes.h
Aula 12/encadeamento-interior-disco/: CMakeLists.txt  cliente.c  cliente.h  encadeamento_interior.c  encadeamento_interior.h  test_encadeamento_interior.c
Aula 13/: heap_disco.c  heap_memoria.c
Aula 3/: busca.c  exclui_no_provinha.c  insere.c
Aula 4/: insere_provinha.c
Aula 5/: grafo_aula.c  grafo_provinha.c
Aula 6/: Arquivo 1.txt  Arquivo 2.txt  Arquivo Merge.txt  Exercicio 1.c  funcionario_altera_nome_completar.c  funcionario_provinha.c  merge.txt  merge_completar.c  merge_solucao.c
Aula 7/: insertion_sort_disco_completar.c  provinha 06.c
Aula 8/: Part3.txt  Part4.txt  Part5.txt
Aula 9/: Provinha 08.xlsx  abv_otim_aula.c  alg_basico_intercalacao.c  part2.txt  part3.txt  part4.txt
Lista Exercícios 1/: Questao 1.c  Questao 2.c  Questao 3.c  Questao 6.c  Questao 7.c  Questao 8.c  (+1 more)
(+7 files in other folders)
